--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
       
     </footer>
-    <div class="backdrop is-hidden"data-modal>
+    <div class="backdrop"data-modal>
           <div class="modal">
             <button class="modal-close" type="button" data-modal-close>
               <svg width="18" height="18" >
@@ -312,7 +312,7 @@
                </svg>
             </button>
 
-              <h2>Залиште свої дані, ми вам передзвонимо</h2>
+              <p>Залиште свої дані, ми вам передзвонимо</p>
             <form name="modal-wiew">
               <ul>
               <li>
