--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@
                 Коментар
                 <textarea name="user-message" class="modal-form-massage" placeholder="Введіть текст"></textarea>
               </label>
+              <input type="checkbox" id="user-polisy" class="modal-form-check visually-hidden">
+              <label for="user-polisy" class="modal-form-check-desc">
+                Погоджуюся з розсилкою та приймаю  <span>Умови договору</span>
+              </label>
               <button type="submit">Відправити</button>
             </form>
 
