--- a/portfolio.html
+++ b/portfolio.html
@@ -300,6 +300,23 @@
                 </svg></a></li>
           </ul>
        </div>
+       <div>
+        <p class="footer-title">Підпишіться на розсилку</p>
+       <form class="futter-form">
+
+        <label for="">
+                <span class="footer-form-input-wrapper">
+                  <input class="footer-form-input" type="email" name="email" required placeholder="E-mail" >
+                </span>
+        </label>
+        <span class="footer-form-input-wrapper">
+          <button type="submit" class="footer-form-submit">Підписатися</button>
+              <svg class="footer-form-input-icon" width="18" height="18">
+                <use href="./images-2/icons.svg#icon-send"></use>
+              </svg>
+        </span>
+       </form>
+       </div>
       
       </div>
       
