--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Шапка -->
     <header class="header-link">
      <div class="container header-container">
-        <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span class="web">Studio</span></a>
       <nav class="auth-nav">
         <ul class="header ">
           <div class="header-animation">
@@ -286,16 +286,16 @@
        <div class="container-right">
         <h2 class="footer-rigth-title">приєднуйтесь</h2>
           <ul class="icon-team">
-                  <li><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
                 <use href="./images-2/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-                  <li><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
                 <use href="./images-2/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                  <li><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
                 <use href="./images-2/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                  <li><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
                 <use href="./images-2/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
