--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700;800&family=Roboto:wght@400;500;700;800;900&display=swap"
       rel="stylesheet"
     />
     <title>goit-markup-hw-02</title>
@@ -276,16 +276,16 @@
        <div class="container-right">
         <h2 class="footer-rigth-title">Social media</h2>
           <ul class="icon-team">
-                  <li class="icon-team-elements"><a href=""><svg width="24" height="24">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="24" height="24">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="24" height="24">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="24" height="24">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
@@ -359,7 +359,7 @@
               <label for="user-polisy" class="modal-form-check-desc">
                 I accept the terms and conditions of the &nbsp;<a href="#">Privacy Policy</a>
               </label>
-              <button type="submit" class="modal-form-submit">Відправити</button>
+              <button type="submit" class="modal-form-submit">Send</button>
             </form>
 
             
