--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
       <section class="hero-portfolio">
         <div class="container">
             <div class="visually-hidden"><h1>Заголовок</h1></div>
-            <ul class="hero-portfolio-link">
+            <ul class="hero-portfolio-button">
               <li><button type="button">All</button></li>
               <li><button type="button">Web Site</button></li>
               <li><button type="button">App</button></li>
@@ -285,16 +285,16 @@
        <div class="container-right">
         <h2 class="footer-rigth-title">Social media</h2>
           <ul class="icon-team">
-                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                  <li class="icon-team-elements"><a href=""><svg width="20" height="20">
+                  <li class="icon-team-elements"><a class="container-right-link" href=""><svg width="24" height="24">
                 <use href="./images-2/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
           </ul>
