--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
                 </span>
         </label>
         <span class="footer-form-input-wrapper">
-          <button type="submit" class="footer-form-submit">Subscribe</button>
-              <svg class="footer-form-input-icon" width="18" height="18">
+          <button type="submit" class="footer-form-submit"><svg class="footer-form-input-icon" width="18" height="18">
                 <use href="./images-2/icons.svg#icon-send"></use>
-              </svg>
+              </svg>Subscribe</button>
+              
         </span>
        </form>
        </div>
@@ -314,7 +314,7 @@
     <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button class="modal-close" type="button" data-modal-close>
-              <svg width="18" height="18" >
+              <svg width="24" height="24" >
                 <use href="./images-2/icons.svg#icon-close"></use>
                </svg>
             </button>
