--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
       <!-- Управління -->
       <section class="hero-portfolio">
         <div class="container">
-            <div class="visually-hidden"><h1>Заголовок</h1></div>
+            <h1 class="visually-hidden">Заголовок</h1>
             <ul class="hero-portfolio-button">
               <li><button type="button">All</button></li>
               <li><button type="button">Web Site</button></li>
